# home-service-hub

./: .env.example  .gitignore  CLAUDE.md  Inventory.md  README.md  ROADMAP.md  docker-compose.yml  ecosystem.config.js  ruff.toml
.github/workflows/: alembic-heads.yml  service-tests.yml
backend/backend-java/: build.gradle.kts
docs/: accounting-service-improvements.md  stock-portfolio-service-followups.md  stock-portfolio-service-improvement-plan.md
docs/security/: gateway-operations.md  gateway-route-matrix.md  keycloak-operations.md
frontend/: .gitignore  README.md  angular.json  package-lock.json  package.json  proxy.conf.js  set-env.js
frontend/inventory-ui/: .gitignore  angular.json  package-lock.json  package.json  proxy.conf.js  proxy.conf.json  set-env.js
frontend/public/: manifest.json
frontend/src/: index.html  main.ts  styles.scss
infra/config/: prometheus.yml  (+5 more)
modify_history/: 2026-02-05-fix-grafana-log-to-trace-link.md  2026-02-05-migration-observability-sb4.md  2026-02-07-observability-and-env-sync.md  2026-02-15-accounting-refactor-and-observability.md  2026-03-01-stock-portfolio-microservice-and-precision-refactor.md  TEMPLATE.md
scripts/: check_alembic_heads.py
services/shared-python-lib/: pyproject.toml
services/shared-python-lib/home_service_shared.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
services/shared-python-lib/shared_lib/: __init__.py  app_factory.py  auth.py  config.py  database.py  errors.py  health.py  tracing.py
services/shared-python-lib/tests/: test_app_factory.py  test_auth.py  test_errors.py  test_tracing.py
(+370 files in other folders)
